--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li id="about">about</li>
-                <li id="about">contact</li>
+                <li id="contact">contact</li>
             </ul>
         </nav>
         <main>
